manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: pepe
spec: {}
status: {}
