manifests/demo11_secrets.yaml
# kubectl create secret generic database --from-literal=username=sammy --from-literal=password=demo123 --dry-run=client -o yaml
---
# https://kubernetes.io/docs/concepts/configuration/secret/#using-secrets
# kubectl run demo --image=nginx -o yaml --dry-run=client
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: demo
  name: demo
spec:
  containers:
  - image: nginx
    name: demo
    resources: {}
    volumeMounts:
      - name: secret
        mountPath: "/tmp/secret"
        readOnly: true
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
  - name: secret
    secret:
      secretName: database
