manifests/pod_with_labels.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: test
    demo: test
  name: demo3
  namespace: green
spec:
  containers:
  - image: nginx
    name: demo3
    resources: {}
  dnsPolicy: ClusterFirst
