manifests/demo1_netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-egress
  namespace: dev
spec:
  podSelector: {}
  policyTypes:
  - Egress
