manifests/demo2_netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-default-ingress
  namespace: red
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: red
    - podSelector:
        matchLabels:
          demo: test
